--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!-- Background Music -->
     <audio id="birthday-music" autoplay loop>
-        <source src="happy_birthday_song.mp3" type="audio/mp3">
+        <source src="" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
 </body>
